# eco5000-app

./: .gitattributes  .gitignore  BUILD_AND_TEST.md  CHANGELOG_2025-01-29.md  EDGE_IMPULSE_DSP_INTEGRATION.md  FIX_EXPO_NATIVE_MODULE.md  KNOWN_ISSUES.md  LICENSE  MODELO2_IMPLEMENTATION_GUIDE.md  MODELOS_AI.md  QUICK_START.md  README.md  SUCCESS.md  fix-and-rebuild.sh
.claude/: settings.local.json
app/: .gitignore  App.tsx  app.json  expo-build-properties.json  metro.config.js  package-lock.json  package.json  tsconfig.json
app/modules/edge-impulse-native/: expo-module.config.json  package.json
app/modules/edge-impulse-native/android/: CMakeLists.txt  build.gradle
app/modules/edge-impulse-native/android/src/main/cpp/: EdgeImpulseNativeModule.cpp  ei_model_wrapper.cpp
app/modules/edge-impulse-native/android/src/main/java/com/edgeimpulse/: EdgeImpulseModelInfo.kt  EdgeImpulseNativeModule.kt  EdgeImpulseResult.kt
app/modules/edge-impulse-native/src/: index.ts
app/native/cpp/: EdgeImpulseModule.cpp
app/native/cpp/tflite-model/: tflite_learn_840911_39.h  tflite_learn_840911_39.tflite
app/native/kotlin/: EdgeImpulseModule.kt  EdgeImpulsePackage.kt
app/plugins/: withEdgeImpulse.js
app/src/components/: FilePickerButton.tsx  RecordButton.tsx  ResultCard.tsx  SpectralCard.tsx  StatusIndicator.tsx  WaterDropIndicator.tsx  WaveformCard.tsx  index.ts
app/src/hooks/: index.ts  useAudioRecorder.ts  useEdgeImpulse.ts
app/src/screens/: AIScreen.tsx  LandingScreen.tsx  index.ts
app/src/services/: EdgeImpulseModule.ts  EdgeImpulseNativeModule.ts  EdgeImpulseTFLite.ts  dsp-preprocessing.ts
app/src/types/: index.ts
app/src/utils/: audioParser.ts  audioSegmentation.ts
modelo1/: README.txt
modelo1/model-parameters/: model_metadata.h  model_variables.h
modelo1/tflite-model/: tflite_learn_839509_110.h  tflite_learn_839509_110.tflite
modelo2/: README.txt
modelo2/model-parameters/: model_metadata.h  model_variables.h
modelo2/tflite-model/: tflite_learn_839504_39.h  tflite_learn_839504_39.tflite  tflite_learn_840223_110.h  tflite_learn_840223_110.tflite  tflite_learn_840915_110.h  tflite_learn_840915_110.tflite
